[gd_scene load_steps=4 format=3 uid="uid://ckgpsfhm3urnw"]

[ext_resource type="Texture2D" uid="uid://bpc5bvt0atvj2" path="res://assets/placeholders/star_unfilled.png" id="1_84wxm"]
[ext_resource type="Script" path="res://scenes/game_view/game_view.gd" id="1_sdgry"]
[ext_resource type="Texture2D" uid="uid://c4ue7fi0lkyb3" path="res://assets/placeholders/star_filled.png" id="2_1164l"]

[node name="GameView" type="Control" groups=["global_signal(on_game_pressed)"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdgry")
metadata/_edit_use_anchors_ = true

[node name="Media" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2

[node name="ImagePreview" type="TextureRect" parent="Media"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="GameTitle" type="Control" parent="Media"]
layout_mode = 1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.400002
offset_bottom = -0.800003
grow_vertical = 0

[node name="Name" type="Label" parent="Media/GameTitle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
clip_text = true
text_overrun_behavior = 3

[node name="Logo" type="TextureRect" parent="Media/GameTitle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.24
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 0.519989
offset_bottom = 0.199997
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="Media"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Data" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Data"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Data/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Data/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play "

[node name="VBoxContainer" type="VBoxContainer" parent="Data/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayDate" type="Label" parent="Data/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Last played on: %s"

[node name="PlayCount" type="Label" parent="Data/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play count: %d"

[node name="NumPlayers" type="Label" parent="Data/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Number of players: %s"

[node name="HBoxContainer" type="HBoxContainer" parent="Data/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Data/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rating: "

[node name="Rating" type="TextureProgressBar" parent="Data/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.65
nine_patch_stretch = true
texture_under = ExtResource("1_84wxm")
texture_progress = ExtResource("2_1164l")

[node name="Favorite" type="Button" parent="Data/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Fav"

[node name="HSeparator" type="HSeparator" parent="Data/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Data/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Data/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Developer" type="Label" parent="Data/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Developer: %s"

[node name="Publisher" type="Label" parent="Data/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Publisher: %s"

[node name="Genres" type="Label" parent="Data/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Genre: %s"

[node name="ReleaseDate" type="Label" parent="Data/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Release date: %s"

[node name="ScrollContainer" type="ScrollContainer" parent="Data/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="Description" type="Label" parent="Data/VBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Game details"
autowrap_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 60.0
offset_bottom = 46.0
text = "Back"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
